Updated Week4 files.

--- a/Week3/Results/Autocorrelation.tex
+++ b/Week3/Results/Autocorrelation.tex
@@ -8,7 +8,7 @@
 \title{Autocorrelation in Weather: Are temperatures of one year significantly correlated with the next year (successive years), across years in a given location?}
 
 \author{Amy Solman \\% <-this % stops a space
-Msc. Computational Methods in Ecology and Evolution - 2019\\
+MRes. Computational Methods in Ecology and Evolution - 2019\\
 Imperial College London\\
 Biological Computing in R}
 
