--- a/Week1/Code/FirstExample.tex
+++ b/Week1/Code/FirstExample.tex
@@ -1,16 +1,16 @@
 \documentclass[12pt]{article}
-\title{A Simple document}
+\title{A Simple Document}
 \author{Amy Solman}
-\date{23/10/2019}
+\date{02/10/2019}
 \begin{document}
   \maketitle
   
   \begin{abstract}
-    This paper must be cool!
+  This paper must be cool!
   \end{abstract}
   
   \section{Introduction}
-    Blah Blah!
+  Blah! Blah!
 
   \section{Materials \& Methods}
   One of the most famous equations is:
