Research project final push

--- a/Project/FinalReport/acknowledgements.tex
+++ b/Project/FinalReport/acknowledgements.tex
@@ -1,2 +1,2 @@
 \chapter{Acknowledgements}
-Thank you to my supervisors, Ryan, James and Tom. Thank you to all of the people that took the time to share their data with me.
+Thank you to my supervisors, Ryan, James and Tom for all your support over the last few months. I've learned so much. Thank you to all of the people that took the time to share their data with me and offer advice.
