--- a/Project/FinalReport/datacodeavailability.tex
+++ b/Project/FinalReport/datacodeavailability.tex
@@ -1,3 +1,3 @@
 \chapter{Data and Code Availability}
 
-Name a data (e.g., Dropbox, FigShare, Zenodo, etc) and a code (e.g., Dropbox, GitHub, etc.) archive from where the data and code can be obtained that will allow replication of your results. The code may be in the form of a single script file. You will be taught the principles of reproducible analyses in the R week of your coursework. If the data cannot be made available publicly (e.g., because it is yet to be formally published), or if there are some other confidentiality issues with submitting the data, speak with your course director and supervisor, and include a clear statement about why the data cannot be made available under the same Code and Data Availability header. Note that most data repositories allow timed embargos on data (e.g., Zenodo; see http://about.zenodo.org/policies/).
+All data and code are available at GitHub: amysolman/CMEECourseWork/Project.
