--- a/Project/FinalReport/supplementary.tex
+++ b/Project/FinalReport/supplementary.tex
@@ -356,7 +356,11 @@ S29, D56 \& 57
 \subfloat[Dataset 54, fungi in a soil based laboratory experiment]{\label{fig:b}\includegraphics[width=0.45\linewidth]{../Results/PeriNLLSPlot48.pdf}}\\
 \subfloat[Dataset 22, benthic bacteria in saline lakes (log area plotted with depth)]{\label{fig:c}\includegraphics[width=0.45\textwidth]{../Results/DepthNLLSPlot19.pdf}}\qquad%
 \subfloat[Dataset 22, benthic bacteria in saline lakes (log volume plotted with OTU richness)]{\label{fig:d}\includegraphics[width=0.45\textwidth]{../Results/DepthNLLSPlot2_19.pdf}}%
-\caption{Selection of plots of datasets that failed to be fit using either of the three model variants (Classic, Depth, Perimeter) or the power-law model, where the blue line is the model fit, the green line is the power-law model fit and the red dotted line is the \textit{A\textsubscript{crit}} estimation. A) Dataset 4, bacteria in cryoconite holes with the Classic Model (R\textsubscript{2}=0.02, adjusted R\textsubscript{2}=-0.13, $\theta$=29, \textit{m\textsubscript{0}}=0.208, \textit{K}=354, \textit{A\textsubscript{crit}}=294 cm\textsuperscript{2}). B) Fungi in soil based laboratory experiment plotted with the Perimeter Model (R\textsubscript{2}=0.099, adjusted R\textsubscript{2}=Inf, $\theta$=6, \textit{m\textsubscript{0}}=6.24 x 10\textsuperscript{-6}, \textit{K}=1, \textit{A\textsubscript{crit}}=2.89 x 10\textsuperscript{-2} cm\textsuperscript{2}). C) Benthic bacteria in saline lakes plotted with the Depth Model (R\textsubscript{2}=0.51, adjusted R\textsubscript{2}=-0.15, $\theta$=14, \textit{m\textsubscript{0}}=1.98 x 10\textsuperscript{-16}, \textit{K}=81, \textit{A\textsubscript{crit}}=1.89 x 10\textsuperscript{11} cm\textsuperscript{2})}
+\bigskip
+
+Simulation data point \tikz\draw[black,fill=black] (0,0) circle (.5ex); \;\;NLLS fit \textcolor{blue}{\rule{1.5cm}{1mm}} \;\;Power-Law fit \textcolor{green}{\rule{1.5cm}{1mm}}\;\; \textit{A\textsubscript{crit}/A\textsubscript{vol}}\;\; \textcolor{red}{\rule{0.1cm}{1mm}}\; \textcolor{red}{\rule{0.1cm}{1mm}}\; \textcolor{red}{\rule{0.1cm}{1mm}}\; \textcolor{red}{\rule{0.1cm}{1mm}}\\
+
+\caption{Selection of plots of datasets that failed to be fit using either of the three model variants (Classic, Depth, Perimeter) or the power-law model, where the blue line is the model fit, the green line is the power-law model fit and the red dotted line is the \textit{A\textsubscript{crit}} estimation. A) Dataset 4, bacteria in cryoconite holes with the Classic Model (NLLS fit: R\textsubscript{2}=0.02, adjusted R\textsubscript{2}=-0.13, $\theta$=29, \textit{m\textsubscript{0}}=0.208, \textit{K}=354, \textit{A\textsubscript{crit}}=294 cm\textsuperscript{2}, power-law fit: R\textsubscript{2}=0.02, adjusted R\textsubscript{2}=-0.14, \textit{z}=0.04, \textit{c}=5.03). B) Fungi in soil based laboratory experiment plotted with the Perimeter Model (R\textsubscript{2}=0.099, adjusted R\textsubscript{2}=Inf, $\theta$=6, \textit{m\textsubscript{0}}=6.24 x 10\textsuperscript{-6}, \textit{K}=1, \textit{A\textsubscript{crit}}=2.89 x 10\textsuperscript{-2} cm\textsuperscript{2}, power-law fit: R\textsubscript{2}=0.99, adjusted R\textsubscript{2}=-Inf, \textit{z}=0.30, \textit{c}=5.41). C) Benthic bacteria in saline lakes plotted with the Depth Model (R\textsubscript{2}=0.51, adjusted R\textsubscript{2}=-0.15, $\theta$=14, \textit{m\textsubscript{0}}=1.98 x 10\textsuperscript{-16}, \textit{K}=81, \textit{A\textsubscript{crit}}=1.89 x 10\textsuperscript{11} cm\textsuperscript{2}, power-law fit: R\textsubscript{2}=0.24, adjusted R\textsubscript{2}=-0.77, \textit{z}=0.04, \textit{c}=39)}
 \label{fig:myfig}
 \end{figure}
 
